# EdgeView

./: .gitignore  CMakeLists.txt  IoT_DB_Structure.xlsx  README.md
EdgeViewAPI/: CMakeLists.txt
EdgeViewAPI/core/include/: EdgeViewAPIServer.hpp  RequestProcessor.hpp
EdgeViewAPI/core/src/: EdgeViewAPIServer.cpp  RequestProcessor.cpp  main.cpp
EdgeViewAPI/dataaccess/include/: DataEntity.hpp  DataInterface.hpp  DbInit.hpp
EdgeViewAPI/dataaccess/src/: DataEntity.cpp  DataInterface.cpp  DbInit.cpp
EdgeViewAPI/http/include/: QtHttpClientWrapper.hpp  QtHttpHeader.h  QtHttpReply.h  QtHttpRequest.hpp  QtHttpServer.hpp
EdgeViewAPI/http/src/: QtHttpClientWrapper.cpp  QtHttpHeader.cpp  QtHttpReply.cpp  QtHttpRequest.cpp  QtHttpServer.cpp
EdgeViewAPI/include/: AbnfAdapter.hpp  AbnfMessage.hpp  Configuration.hpp  Defines.hpp  Directory.hpp  EventHandler.hpp  HttpHandler.hpp  HttpServer.hpp  Logger.hpp  Mutex.hpp  NetworkHelper.hpp  ProcessLock.hpp  ResourceHandler.hpp  Responder.hpp  SignalHandler.hpp  StringHandler.hpp  Timestamp.hpp  Variant.hpp  Version.hpp
EdgeViewAPI/model/include/: Ads.h  AdsLocal.h  Users.h  Users.hpp
EdgeViewAPI/model/src/: Ads.cpp  AdsLocal.cpp  Users.cpp
EdgeViewAPI/src/: AbnfAdapter.cpp  AbnfMessage.cpp  Configuration.cpp  Directory.cpp  EdgeViewAPI.cpp  EventHandler.cpp  HttpHandler.cpp  HttpServer.cpp  Logger.cpp  Mutex.cpp  NetworkHelper.cpp  ProcessLock.cpp  ResourceHandler.cpp  Responder.cpp  SignalHandler.cpp  StringHandler.cpp  Timestamp.cpp  Variant.cpp  main.cpp
EdgeViewUI/: CMakeLists.txt
EdgeViewUI/include/: Application.hpp  ApplicationMenu.hpp  ApplicationTheme.hpp  Controller.hpp  Device.hpp  User.hpp
EdgeViewUI/resources/android/: EdgeView.qrc
EdgeViewUI/resources/desktop/: EdgeViewUI.qrc
EdgeViewUI/resources/desktop/qml/: Alarms.qml  Areas.qml  CustomBarChart.qml  CustomButton.qml  CustomLineChart.qml  CustomMenuItem.qml  CustomTable.qml  CustomTrendCard.qml  Devices.qml  Enterprises.qml  FontSizer.qml  Header.qml  Home.qml  MainWindow.qml  Roles.qml  Rules.qml  Sites.qml  Telemetry.qml  Users.qml
EdgeViewUI/resources/linux/: EdgeView.qrc
EdgeViewUI/resources/linux/qml/: Dashboard.qml  MainWindow.qml
EdgeViewUI/src/: Application.cpp  Controller.cpp  ControllerAppMgmt.cpp  ControllerComm.cpp  Device.cpp  User.cpp  main.cpp
include/: Controller.hpp
src/: main.cpp
